--- a/Deployment.yaml
+++ b/Deployment.yaml
@@ -23,3 +23,19 @@ spec:
         image: vk1025/myapp:malaria_app_3
         ports:
         - containerPort: 5000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: malaria-service
+  labels:
+    name: malaria-service
+    app: malaria-app
+spec:
+  type: LoadBalancer
+  ports:
+  - port: 5000
+    targetPort: 5000
+  selector:
+    name: malaria-app-pod
+    app: malaria-app
